--- a/main.templ
+++ b/main.templ
@@ -57,6 +57,96 @@ templ Index() {
                 <button class="outline" onclick="setSourceQR()" type="submit">Create QR</button>
             </div>
         </form>
+        <div>
+        <script src="https://unpkg.com/html5-qrcode"></script>
+        <div>
+        <p style="text-align: center; padding: 20px"> or </p>
+            <button
+                id="scanButton"
+                data-target="qr-scan-modal"
+                onclick="toggleModal()"
+                type="submit"
+                class="outline"
+            >
+                Scan QR
+            </button>
+            <dialog
+                id="qr-scan-modal"
+                style="width: 100vw; height: 100vh"
+                hidden
+            >
+                <article
+                    style="
+                        margin: 0;
+                        max-width: 100%;
+                        height: 100%;
+                        max-height: 100%;
+                    "
+                >
+                    <header>
+                        <button
+                            aria-label="Close"
+                            rel="prev"
+                            data-target="qr-scan-modal"
+                            onclick="toggleModal()"
+                        ></button>
+                        <p>
+                            <strong>Scan any type of QR/Barcode</strong>
+                        </p>
+                    </header>
+                    <div id="reader"></div>
+                    <div id="reader-result" style="text-align: center"></div>
+                </article>
+            </dialog>
+        </div>
+        <script>
+            let html5QrcodeScanner = new Html5QrcodeScanner(
+                "reader",
+                { fps: 10, qrbox: { width: 250, height: 250 } },
+                /* verbose= */ false,
+            );
+
+            function toggleModal() {
+                html5QrcodeScanner.clear();
+                document.getElementById("reader-result").innerHTML = "";
+                const modal = document.getElementById("qr-scan-modal");
+                modal.hidden = !modal.hidden;
+                modal.open = !modal.open;
+            }
+
+            function rescan() {
+                document.getElementById("reader-result").innerHTML = "";
+                html5QrcodeScanner.clear();
+                html5QrcodeScanner.render(onScanSuccess, onScanFailure);
+            }
+
+            function onScanSuccess(decodedText, decodedResult) {
+                document.getElementById("reader-result").innerHTML =
+                    `<b>Scanned Result</b><br /> <br /> <p style="
+                    padding: 20px;
+                    max-width: 400px;
+                    margin: auto;
+                    border: 2px solid var(--pico-primary-background);
+                    border-radius: 5px;">${decodedText}</p> <br/> <br/>` +
+                    `<button onclick="rescan()">Rescan</button>`;
+                html5QrcodeScanner.clear();
+                // stop camera after successful scan using camera api
+                stream.getTracks().forEach((track) => track.stop());
+                console.log(`Code matched = ${decodedText}`, decodedResult);
+            }
+
+            function onScanFailure(error) {
+                console.warn(`Code scan error = ${error}`);
+            }
+
+            // add the following code on click of the button
+            document
+                .getElementById("scanButton")
+                .addEventListener("click", () => {
+                    html5QrcodeScanner.render(onScanSuccess, onScanFailure);
+                });
+        </script>
+        </div>
     }
 }
 
